// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for "cfamily" 1`] = `
<CFamily
  branchesEnabled={false}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  mainBranchName="main"
  onDone={[MockFunction]}
/>
`;

exports[`should render correctly for "dotnet" 1`] = `
<DotNet
  branchesEnabled={false}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  mainBranchName="main"
  onDone={[MockFunction]}
/>
`;

exports[`should render correctly for "gradle" 1`] = `
<Gradle
  branchesEnabled={false}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  mainBranchName="main"
  onDone={[MockFunction]}
/>
`;

exports[`should render correctly for "maven" 1`] = `
<JavaMaven
  branchesEnabled={false}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  mainBranchName="main"
  onDone={[MockFunction]}
/>
`;

exports[`should render correctly for "other" 1`] = `
<Others
  branchesEnabled={false}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  mainBranchName="main"
  onDone={[MockFunction]}
/>
`;

exports[`should render correctly for undefined 1`] = `""`;
